--- a/FIP/InicialFIP/columnas.css
+++ b/FIP/InicialFIP/columnas.css
@@ -4,15 +4,15 @@ width: 1050px;/*Originalmente 1050px*/
 margin: auto;}
 
 #lateral{
-width: 250px;  /*Este será el ancho que tendrá tu columna*/
+width: 250px;  /*Este ser? el ancho que tendr? tu columna*/
 height: 300px; /*Alto de la columna*/
-background-color: #DCDCDC;  /*Aquí pon el color del fondo que quieras para este lateral*/
+background-color: #DCDCDC;  /*Aqu? pon el color del fondo que quieras para este lateral*/
 float:left; /*Aqui determinas de lado quieres quede esta "columna" */
 }
 
 #principal{
-margin-left:300px; /*Margen para no encimar contenido, es importante que pongas un pocos pixeles más que el ancho  de tu columna lateral, antes = 280*/
-margin-right:50px; /*Margen pero de la derecha*/
+margin-left:100px; /*Margen para no encimar contenido, es importante que pongas un pocos pixeles m?s que el ancho  de tu columna lateral, antes = 280, antes = 300*/
+margin-right:100px; /*Margen pero de la derecha, antes = 50*/
 background-color: #FFFFFF;
 border:#DCDCDC 0px solid; /*ponemos un dorde para que se vea bonito*/
 color:#696969;
@@ -32,4 +32,3 @@ border: 0;
 margin: 10px auto;
 text-align: center;
 }
-
